welcome back off center dont know how to fix

--- a/src/Components/Register.scss
+++ b/src/Components/Register.scss
@@ -18,6 +18,7 @@
   background-color: transparent;
   line-height: 2em;
   margin: 0;
+  float: left;
 }
 
 .register form{
@@ -44,3 +45,6 @@
   border-radius: 20px;
   cursor: pointer;
 }
+
+//login
+
